--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 .problem {
     margin-bottom: 20px;
 }
+html, body {
+    height: 100%;
+}
+body {
+    display: flex;
+    flex-direction: column;
+}
+.container {
+    flex: 1;
+}
