--- a/style.css
+++ b/style.css
@@ -1,24 +1,135 @@
 body {
+    font-family: 'Roboto', sans-serif;
     background-color: #f0f0f0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    color: #9aa5b1;
 }
+
+h1 {
+    color: #012040;
+}
+
+a {
+    text-decoration: none;
+}
+
+.problem {
+    text-align: center;
+    margin: 20px 0;
+    color: #081e36;
+}
+
 .container {
     flex: 1;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-footer {
-    background-color: #343a40;
+
+.card-title {
+    text-align: center;
+}
+
+.form-group {
+    text-align: center;
+}
+
+.input {
+    border: none;
+    padding: 1rem;
+    border-radius: 1rem;
+    background: #e8e8e8;
+    box-shadow: 20px 20px 80px #c5c5c5,
+        -20px -20px 80px #ffffff;
+    transition: 0.3s;
+    margin-bottom: 20px;
+}
+
+.input:focus {
+    outline-color: #e8e8e8;
+    background: #e8e8e8;
+    box-shadow: inset 20px 20px 60px #c5c5c5,
+        inset -20px -20px 60px #ffffff;
+    transition: 0.3s;
+}
+
+.card {
+    width: 250px;
+    height: 400px;
+    border-radius: 50px;
+    background: #e0e0e0;
+    box-shadow: 20px 20px 60px #bebebe,
+        -20px -20px 60px #ffffff;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+
+button {
+    color: #090909;
+    padding: 0.7em 1.7em;
+    font-size: 18px;
+    border-radius: 0.5em;
+    background: #e8e8e8;
+    cursor: pointer;
+    border: 1px solid #e8e8e8;
+    transition: all 0.3s;
+    box-shadow: 6px 6px 30px #c5c5c5, -6px -6px 30px #ffffff;
+}
+
+.error {
+    background-color: red;
     color: white;
+}
+
+.success {
+    background-color: green;
+    color: white;
+}
+
+button:active {
+    color: #666;
+    box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+}
+
+.submitBtnDiv {
+    text-align: center;
+}
+
+.streak {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.feedback {
+    text-align: center;
+    margin-top: 20px;
+}
+
+
+footer {
     text-align: center;
     padding: 1rem 0;
+    font-size: 0.875rem;
 }
-#cookie-banner {
+
+.cookie-card {
+    display: none;  
+    max-width: 320px;
+    padding: 1rem;
+    margin-bottom: 5px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, .05);
     position: fixed;
+    left: 50%;
     bottom: 0;
-    width: 100%;
-    background-color: #f1f1f1;
-    padding: 10px;
-    text-align: center;
-    box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+    transform: translateX(-50%);
+    box-sizing: border-box; 
 }
